--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         img {
             position: absolute;
             left: 50%;
+            width: 2vh;
             transform: translateX(-50%);
         }
         
